update docker file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,7 @@ ARG KEYCLOAK_IMAGE="quay.io/keycloak/keycloak:20.0.2"
 # Build protocoll mapper so that it always has the current version
 FROM maven:3.8 as jdk-builder
 
-WORKDIR /workspace
+WORKDIR /
 COPY . ./
 
 RUN mvn clean package
