Add them to keycloak

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,5 +3,6 @@ ARG KEYCLOAK_IMAGE="bitnami/keycloak:21.1.1"
 # Create keycloak image
 FROM ${KEYCLOAK_IMAGE}
 
+COPY ./vnm-keycloak-them/login/ /opt/jboss/keycloak/themes/vnmtheme
 
-#COPY ./assets/*.jar /opt/bitnami/keycloak/providers/
+EXPOSE 3000
