update docker file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,4 +3,7 @@ ARG KEYCLOAK_IMAGE="bitnami/keycloak:21.1.1"
 # Create keycloak image
 FROM ${KEYCLOAK_IMAGE}
 
-COPY ./vnm-keycloak-them/login/ /opt/jboss/keycloak/themes/vnmtheme
+WORKDIR /
+
+# COPY vnm-* /opt/bitnami/keycloak/themes/vnmtheme
+CMD [ "cp ./keycloak-them/login /opt/bitnami/keycloak/themes/vnmtheme" ]
