--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,6 @@ ARG KEYCLOAK_IMAGE="bitnami/keycloak:21.1.1"
 # Create keycloak image
 FROM ${KEYCLOAK_IMAGE}
 
-WORKDIR /
+WORKDIR /keycloak
 
-# COPY vnm-* /opt/bitnami/keycloak/themes/vnmtheme
-CMD [ "cp ./keycloak-them/login /opt/bitnami/keycloak/themes/" ]
+COPY ./vnm-keycloak-theme/login/*  /opt/bitnami/keycloak/themes/
